--- a/Test_data.ipynb
+++ b/Test_data.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/RishiMadhwal/sentiment_analysis/blob/main/Test_data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -42,55 +27,34 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "df=pd.read_excel(\"/content/Sample_dataset_Reviews .xlsx\",sheet_name=\"Training_set\")"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "Tup4nBT4mBee"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df=pd.read_excel(\"/content/Sample_dataset_Reviews .xlsx\",sheet_name=\"Training_set\")"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df.head()"
-      ],
+      "execution_count": 3,
       "metadata": {
-        "id": "8dUexxgkmDHS",
-        "outputId": "cb718368-1a9f-4174-d8d6-be3a1cbfaa2a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "8dUexxgkmDHS",
+        "outputId": "cb718368-1a9f-4174-d8d6-be3a1cbfaa2a"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "    Location  Phone Number                    Reviews (Positive)  \\\n",
-              "0     Mumbai    9876543210    \"Amazing service and great staff!\"   \n",
-              "1      Delhi    8765432109      \"Best place for authentic food!\"   \n",
-              "2  Bangalore    7654321098    \"Quick response and professional.\"   \n",
-              "3  Hyderabad    6543210987                  \"Delicious biryani!\"   \n",
-              "4    Chennai    9432109876  \"Friendly staff and great ambiance.\"   \n",
-              "\n",
-              "                Reviews (Negative)                   E-mail  \\\n",
-              "0        \"Extremely slow service.\"      info@mumbaicafe.com   \n",
-              "1  \"Food was cold and overpriced.\"   contact@delhibites.com   \n",
-              "2         \"Poor customer support.\"   support@bangaloreit.in   \n",
-              "3       \"Found a hair in my food.\"  hello@hyderabadhotel.in   \n",
-              "4     \"The place was too crowded.\"  feedback@chennaicafe.in   \n",
-              "\n",
-              "                         Address       Business Hours  \n",
-              "0      123, Marine Drive, Mumbai   9:00 AM - 11:00 PM  \n",
-              "1     45, Connaught Place, Delhi  10:00 AM - 10:00 PM  \n",
-              "2         78, MG Road, Bangalore    8:00 AM - 9:00 PM  \n",
-              "3  55, Charminar Road, Hyderabad  11:00 AM - 12:00 AM  \n",
-              "4      88, Marina Beach, Chennai   9:00 AM - 10:00 PM  "
-            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 10,\n  \"fields\": [\n    {\n      \"column\": \"Location\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 10,\n        \"samples\": [\n          \"Ahmedabad\",\n          \"Delhi\",\n          \"Kolkata\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Phone Number\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3332374754,\n        \"min\": 1098765432,\n        \"max\": 9876543210,\n        \"num_unique_values\": 10,\n        \"samples\": [\n          1098765432,\n          8765432109,\n          9321098765\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Reviews (Positive)\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 10,\n        \"samples\": [\n          \"\\\"Loved the Gujarati thali!\\\"\",\n          \"\\\"Best place for authentic food!\\\"\",\n          \"\\\"Affordable prices and great taste!\\\"\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Reviews (Negative)\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 10,\n        \"samples\": [\n          \"\\\"Service was extremely slow.\\\"\",\n          \"\\\"Food was cold and overpriced.\\\"\",\n          \"\\\"Long wait time.\\\"\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"E-mail\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 10,\n        \"samples\": [\n          \"info@ahmedabadcafe.in\",\n          \"contact@delhibites.com\",\n          \"info@kolkatadelights.in\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Address\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 10,\n        \"samples\": [\n          \"12, Law Garden, Ahmedabad\",\n          \"45, Connaught Place, Delhi\",\n          \"101, Park Street, Kolkata\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Business Hours\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 10,\n        \"samples\": [\n          \"8:00 AM - 8:00 PM\",\n          \"10:00 AM - 10:00 PM\",\n          \"10:00 AM - 11:00 PM\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}",
+              "type": "dataframe",
+              "variable_name": "df"
+            },
             "text/html": [
               "\n",
               "  <div id=\"df-08525d67-c296-4948-8b7c-21fd94f0f9ae\" class=\"colab-df-container\">\n",
@@ -385,16 +349,61 @@
               "    </div>\n",
               "  </div>\n"
             ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "variable_name": "df",
-              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 10,\n  \"fields\": [\n    {\n      \"column\": \"Location\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 10,\n        \"samples\": [\n          \"Ahmedabad\",\n          \"Delhi\",\n          \"Kolkata\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Phone Number\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3332374754,\n        \"min\": 1098765432,\n        \"max\": 9876543210,\n        \"num_unique_values\": 10,\n        \"samples\": [\n          1098765432,\n          8765432109,\n          9321098765\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Reviews (Positive)\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 10,\n        \"samples\": [\n          \"\\\"Loved the Gujarati thali!\\\"\",\n          \"\\\"Best place for authentic food!\\\"\",\n          \"\\\"Affordable prices and great taste!\\\"\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Reviews (Negative)\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 10,\n        \"samples\": [\n          \"\\\"Service was extremely slow.\\\"\",\n          \"\\\"Food was cold and overpriced.\\\"\",\n          \"\\\"Long wait time.\\\"\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"E-mail\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 10,\n        \"samples\": [\n          \"info@ahmedabadcafe.in\",\n          \"contact@delhibites.com\",\n          \"info@kolkatadelights.in\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Address\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 10,\n        \"samples\": [\n          \"12, Law Garden, Ahmedabad\",\n          \"45, Connaught Place, Delhi\",\n          \"101, Park Street, Kolkata\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Business Hours\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 10,\n        \"samples\": [\n          \"8:00 AM - 8:00 PM\",\n          \"10:00 AM - 10:00 PM\",\n          \"10:00 AM - 11:00 PM\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
-            }
+            "text/plain": [
+              "    Location  Phone Number                    Reviews (Positive)  \\\n",
+              "0     Mumbai    9876543210    \"Amazing service and great staff!\"   \n",
+              "1      Delhi    8765432109      \"Best place for authentic food!\"   \n",
+              "2  Bangalore    7654321098    \"Quick response and professional.\"   \n",
+              "3  Hyderabad    6543210987                  \"Delicious biryani!\"   \n",
+              "4    Chennai    9432109876  \"Friendly staff and great ambiance.\"   \n",
+              "\n",
+              "                Reviews (Negative)                   E-mail  \\\n",
+              "0        \"Extremely slow service.\"      info@mumbaicafe.com   \n",
+              "1  \"Food was cold and overpriced.\"   contact@delhibites.com   \n",
+              "2         \"Poor customer support.\"   support@bangaloreit.in   \n",
+              "3       \"Found a hair in my food.\"  hello@hyderabadhotel.in   \n",
+              "4     \"The place was too crowded.\"  feedback@chennaicafe.in   \n",
+              "\n",
+              "                         Address       Business Hours  \n",
+              "0      123, Marine Drive, Mumbai   9:00 AM - 11:00 PM  \n",
+              "1     45, Connaught Place, Delhi  10:00 AM - 10:00 PM  \n",
+              "2         78, MG Road, Bangalore    8:00 AM - 9:00 PM  \n",
+              "3  55, Charminar Road, Hyderabad  11:00 AM - 12:00 AM  \n",
+              "4      88, Marina Beach, Chennai   9:00 AM - 10:00 PM  "
+            ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df.tail()"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
